--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 	<head>
 		<title>今日更新</title>
 		<meta charset="UTF-8">
+		<script type="text/javascript">
+				var mytimestr = '服务时长：5418分钟';
+				if(/^服务时长：\d*分钟$/g.test(mytimestr)==true){
+					alert(123);
+				}
+		</script>
 	</head>
 	<body>
 		<h1>Hello World^_^!!</h1>
